--- a/index/index.html
+++ b/index/index.html
@@ -97,7 +97,7 @@
                 <div class="article">
                     <div class="article-car">
                         <div class="article-car-item act-2">
-                            <img class="act-img" src="/webbanoto/image/wigo.png" alt="ảnh xe">d
+                            <img class="act-img" src="/webbanoto/image/wigo.png" alt="ảnh xe">
                         </div>
                     </div>
                 </div>
