--- a/index/index.html
+++ b/index/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="/webbanoto/themify-icons/themify-icons.css">
     <script src="/webbanoto/javascript/main.js"></script>
     <title>Anh Huy Auto</title>
+    <link rel="icon" href="/webbanoto/image/LogoWeb.png">
 </head>
 
 <body>
