--- a/index/signup.html
+++ b/index/signup.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="/webbanoto/guide/styleguide2.css"/>
     <link rel="stylesheet" href="/webbanoto/stylecss/style2.css"/>
     <title>Sign up</title>
+    <link rel="icon" href="/webbanoto/image/LogoWeb.png">
   </head>
   <body>
     <div class="sign-up">
