--- a/index/help.html
+++ b/index/help.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Help</title>
+        <link rel="icon" href="/webbanoto/image/LogoWeb.png">
         <link rel="stylesheet" href="/webbanoto/stylecss/help.css">
         <link rel="stylesheet" href="/webbanoto/themify-icons/themify-icons.css">            
     </head>
