--- a/index/login.html
+++ b/index/login.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="/webbanoto/guide/styleguide1.css" />
   <link rel="stylesheet" href="/webbanoto/stylecss/style1.css" />
   <title>Login</title>
+  <link rel="icon" href="/webbanoto/image/LogoWeb.png">
 </head>
 
 <body>
