--- a/Frontend/help.html
+++ b/Frontend/help.html
@@ -4,9 +4,9 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Help</title>
-        <link rel="icon" href="//image/LogoWeb.png">
-        <link rel="stylesheet" href="//stylecss/help.css">
-        <link rel="stylesheet" href="//themify-icons/themify-icons.css">            
+        <link rel="icon" href="/image/LogoWeb.png">
+        <link rel="stylesheet" href="/stylecss/help.css">
+        <link rel="stylesheet" href="/themify-icons/themify-icons.css">            
     </head>
 
     <body>
@@ -14,7 +14,7 @@
             <div class="header">
                 <div class="logo">
                     <a href="index.html">
-                        <img src="//image/LogoWeb.png" alt="logo-web">
+                        <img src="/image/LogoWeb.png" alt="logo-web">
                     </a>
                 </div>
                 <div class="search-bar">
@@ -22,16 +22,16 @@
                 </div>
                 <nav class="nav-links">
                     <a href="login.html">
-                        <img src="//image/user.png" alt="Login">
+                        <img src="/image/user.png" alt="Login">
                     </a>
                     <a href="https://www.facebook.com/minhvuog.dev" target="_blank" rel="noopener noreferrer" class="facebook-button">
-                        <img src="//image/logofb.png" alt="Facebook">
+                        <img src="/image/logofb.png" alt="Facebook">
                     </a>
                     <a href="#" target="_blank" rel="noopener noreferrer" class="email-button">
-                        <img src="//image/logogmail.png" alt="Email">
+                        <img src="/image/logogmail.png" alt="Email">
                     </a>
                     <a href="https://www.instagram.com/_minhvuog.dzai/" target="_blank" rel="noopener noreferrer" class="instagram-button">
-                        <img src="//image/logoig.png" alt="Instagram">
+                        <img src="/image/logoig.png" alt="Instagram">
                     </a>
                 </nav>
             </div>
