add manager admin

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -30,8 +30,8 @@
             </div>
 
             <nav class="nav-links">
-                <a href="#"><i class="fa fa-print"></i>
-                    <p>Manage Booking</p>
+                <a href="manager.html"><i class="fa fa-print"></i>
+                    <p>Admin Manager</p>
                 </a>
                 <a href="login.html"><i class="fa fa-user"></i>
                     <p>Login</p>
