Update Manager admin & Login

--- a/Frontend/aboutus.html
+++ b/Frontend/aboutus.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Help</title>
         <link rel="icon" href="/image/LogoWeb.png">
-        <link rel="stylesheet" href="/stylecss/help.css">
+        <link rel="stylesheet" href="/stylecss/aboutus.css">
         <link rel="stylesheet" href="/themify-icons/themify-icons.css">            
     </head>
 
@@ -35,10 +35,30 @@
                     </a>
                 </nav>
             </div>
-            <div class="content">
-                <h1>How can we help you?</h1>
+        </div>
+
+        <div class="background">
+            <img src="/image/back.png" alt="back">
+        </div>
+<div class="content-background">
+        <div class="content">
+                <h1>About US</h1>
+                <p>Welcome to Anh Huy Auto, the leading platform for buying and selling cars, designed for those who value convenience, transparency, and quality. We are committed to providing our customers with the best experience, offering a wide range of vehicles from budget-friendly models to high-end luxury cars, catering to all your transportation needs.
+
+                    With a team of experienced professionals, we not only deliver high-quality vehicles but also provide dedicated support throughout the entire process—from consultation and purchasing to warranty and after-sales service. Additionally, our smart online system allows you to easily search, compare, and choose the perfect car without wasting time.
+                    
+                    Let Anh Huy Auto be your trusted companion on every journey! 🚗💨</p>
+
+                <h1> Về chúng tôi</h1>
+                <p>Chào mừng bạn đến với Anh Huy Auto, nền tảng mua bán ô tô hàng đầu dành cho những ai yêu thích sự tiện lợi, minh bạch và chất lượng. Chúng tôi cam kết mang đến cho khách hàng những trải nghiệm tốt nhất với đa dạng dòng xe từ phổ thông đến cao cấp, đáp ứng mọi nhu cầu di chuyển của bạn.
+
+                    Với đội ngũ chuyên gia giàu kinh nghiệm, chúng tôi không chỉ cung cấp các mẫu xe chất lượng mà còn hỗ trợ khách hàng tận tâm từ khâu tư vấn, mua bán đến bảo hành và hậu mãi. Bên cạnh đó, hệ thống trực tuyến thông minh giúp bạn dễ dàng tìm kiếm, so sánh và lựa chọn chiếc xe phù hợp nhất mà không cần mất nhiều thời gian.
+                    
+                    Hãy để Anh Huy Auto đồng hành cùng bạn trên mọi hành trình! 🚗💨</p>
+
+                <h3>How can we help you?</h3>
                 <div class="faq">
-                    <h2>Frequently Asked Questions</h2>
+                    <h4>Frequently Asked Questions</h4>
                     <ul>
                         <li><a href="https://tfsvn.com.vn/vay-mua-o-to-cu-can-luu-y-gi/">How to buy a car?</a></li>
                         <li><a href="https://toyotasure.vn/ban-o-to-cu-gia-cao/">How to sell a car?</a></li>
@@ -47,7 +67,7 @@
                     </ul>
                 </div>
                 <div class="contact">
-                    <h2>Contact Us</h2>
+                    <h5>Contact Us</h5>
                     <p>If you have any other questions, please contact us at:</p>
                     <p>Email: ougvn.it2@gmail.com</p>
                     <p>Phone: 0869528304 - 0866004703</p>
