--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -36,8 +36,8 @@
                 <a href="login.html"><i class="fa fa-user"></i>
                     <p>Login</p>
                 </a>
-                <a href="help.html"><i class="fa fa-question-circle"></i>
-                    <p>Help</p>
+                <a href="aboutus.html"><i class="fa fa-question-circle"></i>
+                    <p>About US</p>
                 </a>
             </nav>
         </div>
