--- a/Frontend/login.html
+++ b/Frontend/login.html
@@ -39,11 +39,11 @@
             </a>
             <div class="text-wrapper-2">or</div>
             <div class="pngegg-wrapper">
-              <img class="pngegg" src="/image/pngegg.png" />
+              <img class="pngegg" src="/image/logofb.png" />
               <button class="button-4">Facebook</button>
             </div>
             <div class="pngwing-com-wrapper">
-              <img class="pngwing-com" src="/image/pngwing.com.png" />
+              <img class="pngwing-com" src="/image/google.png" />
               <button class="button-6">Google</button>
             </div>
             <div class="text-wrapper-3">connect with</div>
