--- a/Frontend/aboutus.html
+++ b/Frontend/aboutus.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Help</title>
+        <title>About Anh Huy Auto</title>
         <link rel="icon" href="/image/LogoWeb.png">
         <link rel="stylesheet" href="/stylecss/aboutus.css">
         <link rel="stylesheet" href="/themify-icons/themify-icons.css">            
