--- a/Frontend/manager.html
+++ b/Frontend/manager.html
@@ -8,6 +8,7 @@
     <script src="/javascript/dashboard.js"></script>
     <title>Management</title>
     <link rel="stylesheet" href="/stylecss/manager.css">
+    <link rel="icon" href="/image/LogoWeb.png">
 </head>
 <body>
     <div class="header">
