--- a/Frontend/aboutus.html
+++ b/Frontend/aboutus.html
@@ -69,8 +69,21 @@
                 <div class="contact">
                     <h5>Contact Us</h5>
                     <p>If you have any other questions, please contact us at:</p>
-                    <p>Email: ougvn.it2@gmail.com</p>
+                    <p>Email: anhhuyauto888@gmail.com</p>
                     <p>Phone: 0869528304 - 0866004703</p>
+                </div>
+                <div class="Tuyendung">
+                    <h5>Recruitment / Tuyển dụng</h5>
+                    <p>Anh Huy Auto tuyển nhân viên bán hàng tại các vị trí nhân viên sale, nhân viên chăm sóc khách hàng, nhân viên lễ tân. Đến với Anh Huy Auto, chúng tôi là một doanh nghiệp bán ô tô chuyên các dòng xe của Toyota số 1 tại Hà Nội. Nếu bạn có đam mê về xe ô tô hay là có nhu cầu tìm kiếm việc làm với mức lương 10.000.000 - 20.000.000 thì đừng ngại mà hãy kết nối ngay với chúng tôi! <br>
+                        <br>
+                        Anh Huy Auto xin chân thành cảm ơn!<br> 
+                        </p>
+                    <p class="name-sign">
+                        Thay mặt công ty <br>
+                        Tổng giám đốc: Dương Minh Vương</p>
+                    <a href="https://forms.gle/m9P8kcA4edZWhxU5A" target="_blank" rel="noopener noreferrer" title="Di chuyển tới trang ứng tuyển" >
+                        <button class="sale-button" > Ứng tuyển việc làm </button>
+                    </a>
                 </div>
             </div>
         </div>
