--- a/Frontend/aboutus.html
+++ b/Frontend/aboutus.html
@@ -71,6 +71,7 @@
                     <p>If you have any other questions, please contact us at:</p>
                     <p>Email: anhhuyauto888@gmail.com</p>
                     <p>Phone: 0869528304 - 0866004703</p>
+                    <p>Address: 123 Nguyễn Trãi, Thanh Xuân, Hà Nội </p>
                 </div>
                 <div class="Tuyendung">
                     <h5>Recruitment / Tuyển dụng</h5>
@@ -80,7 +81,9 @@
                         </p>
                     <p class="name-sign">
                         Thay mặt công ty <br>
-                        Tổng giám đốc: Dương Minh Vương</p>
+                        Tổng giám đốc: Dương Minh Vương <br>
+                        Hẹn gặp giám đốc liên hệ qua thư ký của giám đốc: Mr. Lưu Công Hải
+                    </p>
                     <a href="https://forms.gle/m9P8kcA4edZWhxU5A" target="_blank" rel="noopener noreferrer" title="Di chuyển tới trang ứng tuyển" >
                         <button class="sale-button" > Ứng tuyển việc làm </button>
                     </a>
