--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -57,6 +57,7 @@
                     <div class="filter-option" onclick="selectOption(this)">600M - 800M <i class="fa fa-star"></i></div>
                     <div class="filter-option" onclick="selectOption(this)">800M - 1B <i class="fa fa-star"></i></div>
                     <div class="filter-option" onclick="selectOption(this)">> 1B <i class="fa fa-star"></i></div>
+                    <div class="filter-option" onclick="selectOption(this)">All</i></div>
                 </div>
             </div>
     
@@ -65,10 +66,21 @@
                 <h3 onclick="toggleFilter(this)">Type of Vehicle <i class="fa fa-chevron-up"></i></h3>
                 <div class="filter-options">
                     <div class="filter-option" onclick="selectOption(this)">Sedan <i class="fa fa-arrow-right"></i></div>
-                    <div class="filter-option" onclick="selectOption(this)">Family Car <i class="fa fa-arrow-right"></i></div>
+                    <div class="filter-option" onclick="selectOption(this)">SUV <i class="fa fa-arrow-right"></i></div>
                     <div class="filter-option" onclick="selectOption(this)">Service Car <i class="fa fa-arrow-right"></i></div>
-                    <div class="filter-option" onclick="selectOption(this)">Couple <i class="fa fa-arrow-right"></i></div>
-                    <div class="filter-option" onclick="selectOption(this)">Electric Car <i class="fa fa-bolt"></i></div>
+                    <div class="filter-option" onclick="selectOption(this)">Pickup Truck<i class="fa fa-arrow-right"></i></div>
+                    <div class="filter-option" onclick="selectOption(this)">All</i></div>
+                </div>
+            </div>
+            <!-- Bộ lọc theo dòng xe -->
+            <div class="filter-group">
+                <h3 onclick="toggleFilter(this)">Fuel <i class="fa fa-chevron-up"></i></h3>
+                <div class="filter-options">
+                    <div class="filter-option" onclick="selectOption(this)">Gasoline<i class="fa fa-arrow-right"></i></div>
+                    <div class="filter-option" onclick="selectOption(this)">Oil <i class="fa fa-arrow-right"></i></div>
+                    <div class="filter-option" onclick="selectOption(this)">Electric<i class="fa fa-bolt"></i></div>
+                    <div class="filter-option" onclick="selectOption(this)">Gasoline + Oil <i class="fa fa-arrow-right"></i></div>
+                    <div class="filter-option" onclick="selectOption(this)">All</i></div>
                 </div>
             </div>
         </div>
