--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -13,6 +13,8 @@
     <script src="/javascript/login.js"></script>
     <title>Anh Huy Auto</title>
     <link rel="icon" href="/image/LogoWeb.png">
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
+
 </head>
 
 <body>
@@ -167,6 +169,9 @@
                 <a href=""><i class="ti-linkedin" target="_blank" rel="noopener noreferrer" ></i></a>
             </div>
             <p class="copyright">Developed by <a href="">Founder Minh Vuong Duong & Co-Founder Hai Luu Cong</a></p>
+        </div>
+        <div class="chatbot">
+            <button class="chat-button" onclick="loadPage('https://chatgpt.com')">Chatbot</button>
         </div>
     </div>
     
