--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -43,7 +43,7 @@
                 <a href="manager.html"><i class="fa fa-print"></i>
                     <p>Admin Manager</p>
                 </a>
-                <a id="login-btn" href="login.html">
+                <a id="login-btn" href="/login.html">
                     <i class="fa fa-user"></i> <span id="login-text">Login</span>
                 </a>
                 <a href="aboutus.html"><i class="fa fa-question-circle"></i>
