tiến trình 15% điểm

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -96,172 +96,11 @@
             </div>
         </div>
         <div class="content">
-            <div class="content-title">
+            <div class="content-title" >
                 <h1 class="content-title-heading">Choose Your Vehicle</h1>
             </div>
-            <div class="content-info">
-                <div class="article">
-                    <div class="article-car" onclick="delayedRedirect()">
-                        <div class="article-car-item act-1">
-                            <div>Động cơ Xăng</div>
-                            <div style="margin-left: 80px;">Dung tích 1496 cc</div>
-                        </div>
-                        <div class="article-car-item act-2">
-                            <img class="act-img" src="./image/vios.png" alt="ảnh xe">
-                        </div>
-                        <div class="article-car-item act-3">VIOS 1.5G-CVT</div>
-                        <div class="article-car-item act-4">545.000.000<p style="font-size: 12px; position: absolute; top: -3px; right: 116px;">VNĐ</p></div>
-                        <div class="article-car-item act-5">
-                            <div style="padding-right: 20px;">5 chỗ</div>
-                            <div>|</div>
-                            <div style="padding-left: 20px;">Số tự động vô cấp</div>
-                        </div>
-                    </div>
-                </div>
-                <div class="article">
-                    <div class="article-car">
-                        <div class="article-car-item act-1">
-                            <div>Động cơ Xăng</div>
-                            <div style="margin-left: 80px;">Dung tích 1496 cc</div>
-                        </div>
-                        <div class="article-car-item act-2">
-                            <img class="act-img" src="./image/anh2.png" alt="ảnh xe">
-                        </div>
-                        <div class="article-car-item act-3">VIOS 1.5G-CVT</div>
-                        <div class="article-car-item act-4">545.000.000<p style="font-size: 12px; position: absolute; top: -3px; right: 116px;">VNĐ</p></div>
-                        <div class="article-car-item act-5">
-                            <div style="padding-right: 20px;">5 chỗ</div>
-                            <div>|</div>
-                            <div style="padding-left: 20px;">Số tự động vô cấp</div>
-                        </div>
-                    </div>
-                </div>
-                <div class="article">
-                    <div class="article-car">
-                        <div class="article-car-item act-1">
-                            <div>Động cơ Xăng</div>
-                            <div style="margin-left: 80px;">Dung tích 1496 cc</div>
-                        </div>
-                        <div class="article-car-item act-2">
-                            <img class="act-img" src="./image/anh3.png" alt="ảnh xe">
-                        </div>
-                        <div class="article-car-item act-3">VIOS 1.5G-CVT</div>
-                        <div class="article-car-item act-4">545.000.000<p style="font-size: 12px; position: absolute; top: -3px; right: 116px;">VNĐ</p></div>
-                        <div class="article-car-item act-5">
-                            <div style="padding-right: 20px;">5 chỗ</div>
-                            <div>|</div>
-                            <div style="padding-left: 20px;">Số tự động vô cấp</div>
-                        </div>
-                    </div>
-                </div>
-                <div class="article">
-                    <div class="article-car">
-                        <div class="article-car-item act-1">
-                            <div>Động cơ Xăng</div>
-                            <div style="margin-left: 80px;">Dung tích 1496 cc</div>
-                        </div>
-                        <div class="article-car-item act-2">
-                            <img class="act-img" src="./image/anh4.png" alt="ảnh xe">
-                        </div>
-                        <div class="article-car-item act-3">VIOS 1.5G-CVT</div>
-                        <div class="article-car-item act-4">545.000.000<p style="font-size: 12px; position: absolute; top: -3px; right: 116px;">VNĐ</p></div>
-                        <div class="article-car-item act-5">
-                            <div style="padding-right: 20px;">5 chỗ</div>
-                            <div>|</div>
-                            <div style="padding-left: 20px;">Số tự động vô cấp</div>
-                        </div>
-                    </div>
-                </div>
-                <div class="article">
-                    <div class="article-car">
-                        <div class="article-car-item act-1">
-                            <div>Động cơ Xăng</div>
-                            <div style="margin-left: 80px;">Dung tích 1496 cc</div>
-                        </div>
-                        <div class="article-car-item act-2">
-                            <img class="act-img" src="./image/anh5.png" alt="ảnh xe">
-                        </div>
-                        <div class="article-car-item act-3">VIOS 1.5G-CVT</div>
-                        <div class="article-car-item act-4">545.000.000<p style="font-size: 12px; position: absolute; top: -3px; right: 116px;">VNĐ</p></div>
-                        <div class="article-car-item act-5">
-                            <div style="padding-right: 20px;">5 chỗ</div>
-                            <div>|</div>
-                            <div style="padding-left: 20px;">Số tự động vô cấp</div>
-                        </div>
-                    </div>
-                </div>
-                <div class="article">
-                    <div class="article-car">
-                        <div class="article-car-item act-1">
-                            <div>Động cơ Xăng</div>
-                            <div style="margin-left: 80px;">Dung tích 1496 cc</div>
-                        </div>
-                        <div class="article-car-item act-2">
-                            <img class="act-img" src="./image/anh6.png" alt="ảnh xe">
-                        </div>
-                        <div class="article-car-item act-3">VIOS 1.5G-CVT</div>
-                        <div class="article-car-item act-4">545.000.000<p style="font-size: 12px; position: absolute; top: -3px; right: 116px;">VNĐ</p></div>
-                        <div class="article-car-item act-5">
-                            <div style="padding-right: 20px;">5 chỗ</div>
-                            <div>|</div>
-                            <div style="padding-left: 20px;">Số tự động vô cấp</div>
-                        </div>
-                    </div>
-                </div>
-                <div class="article">
-                    <div class="article-car">
-                        <div class="article-car-item act-1">
-                            <div>Động cơ Xăng</div>
-                            <div style="margin-left: 80px;">Dung tích 1496 cc</div>
-                        </div>
-                        <div class="article-car-item act-2">
-                            <img class="act-img" src="./image/anh7.png" alt="ảnh xe">
-                        </div>
-                        <div class="article-car-item act-3">VIOS 1.5G-CVT</div>
-                        <div class="article-car-item act-4">545.000.000<p style="font-size: 12px; position: absolute; top: -3px; right: 116px;">VNĐ</p></div>
-                        <div class="article-car-item act-5">
-                            <div style="padding-right: 20px;">5 chỗ</div>
-                            <div>|</div>
-                            <div style="padding-left: 20px;">Số tự động vô cấp</div>
-                        </div>
-                    </div>
-                </div>
-                <div class="article">
-                    <div class="article-car">
-                        <div class="article-car-item act-1">
-                            <div>Động cơ Xăng</div>
-                            <div style="margin-left: 80px;">Dung tích 1496 cc</div>
-                        </div>
-                        <div class="article-car-item act-2">
-                            <img class="act-img" src="./image/anh8.png" alt="ảnh xe">
-                        </div>
-                        <div class="article-car-item act-3">VIOS 1.5G-CVT</div>
-                        <div class="article-car-item act-4">545.000.000<p style="font-size: 12px; position: absolute; top: -3px; right: 116px;">VNĐ</p></div>
-                        <div class="article-car-item act-5">
-                            <div style="padding-right: 20px;">5 chỗ</div>
-                            <div>|</div>
-                            <div style="padding-left: 20px;">Số tự động vô cấp</div>
-                        </div>
-                    </div>
-                </div>
-                <div class="article article-last">
-                    <div class="article-car">
-                        <div class="article-car-item act-1">
-                            <div>Động cơ Xăng</div>
-                            <div style="margin-left: 80px;">Dung tích 1496 cc</div>
-                        </div>
-                        <div class="article-car-item act-2">
-                            <img class="act-img" src="./image/vios.png" alt="ảnh xe">
-                        </div>
-                        <div class="article-car-item act-3">VIOS 1.5G-CVT</div>
-                        <div class="article-car-item act-4">545.000.000<p style="font-size: 12px; position: absolute; top: -3px; right: 116px;">VNĐ</p></div>
-                        <div class="article-car-item act-5">
-                            <div style="padding-right: 20px;">5 chỗ</div>
-                            <div>|</div>
-                            <div style="padding-left: 20px;">Số tự động vô cấp</div>
-                        </div>
-                    </div>
-                </div>
+            <div class="content-info" id="car-list">
+                <!-- danh sach xe -->
             </div>
 
         </div>
@@ -285,11 +124,55 @@
         </div>
     </div>
     <script>
-        function delayedRedirect() {
-        setTimeout(function () {
-            window.location.href = "detailCar.html";
-        }, 500); 
-    }
-    </script>
+        // Hàm để hiển thị danh sách xe
+        async function loadCars() {
+            try {
+                // Gọi API để lấy dữ liệu xe
+                const response = await fetch('/api/cars');
+                const cars = await response.json();
+                
+                // Lấy phần tử chứa danh sách xe
+                const carList = document.getElementById('car-list');
+                carList.innerHTML = ''; // Xóa nội dung cũ
+                // Duyệt qua từng xe và tạo HTML
+                cars.forEach(car => {
+                    console.log(car.id);
+                    const carHTML = `
+                        <div class="article" onclick="delayedRedirect(${car.id})">
+                            <div class="article-car">
+                                <div class="article-car-item act-1">
+                                    <div>${car.Fuel || 'Động cơ Xăng'}</div>
+                                </div>
+                                <div class="article-car-item act-2">
+                                    <img class="act-img" src="${car.URL}" alt="${car.name}">
+                                </div>
+                                <div class="article-car-item act-3">${car.name}</div>
+                                <div class="article-car-item act-4">
+                                    ${car.Price}
+                                    <p style="font-size: 12px; position: absolute; top: -3px; right: 116px;">${car.currency || 'VNĐ'}</p>
+                                </div>
+                                <div class="article-car-item act-5">
+                                    <div style="padding-right: 20px;">${car.seats || '5 chỗ'}</div>
+                                    <div>|</div>
+                                    <div style="padding-left: 20px;">${car.transmission || 'Số tự động'}</div>
+                                </div>
+                            </div>
+                        </div>
+                    `;
+                    carList.insertAdjacentHTML('beforeend', carHTML);
+                });
+            } catch (error) {
+                console.error('Lỗi khi tải danh sách xe:', error);
+                document.getElementById('car-list').innerHTML = '<p>Không thể tải danh sách xe. Vui lòng thử lại sau.</p>';
+            }
+        }
+        document.addEventListener('DOMContentLoaded', loadCars);
+        // Hàm chuyển hướng (sửa lại để truyền ID xe)
+        function delayedRedirect(carId) {
+            setTimeout(() => {
+                window.location.href = `detailCar.html?id=${carId}`;
+            }, 500);
+        }
+        </script>
 </body>
 </html>
