--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -63,12 +63,12 @@
             <div class="filter-group">
                 <h3 onclick="toggleFilter(this)">Price of Vehicle <i class="fa fa-chevron-up"></i></h3>
                 <div class="filter-options">
-                    <div class="filter-option" onclick="selectOption(this); FilterByPrice(200000000,400000000)">200M - 400M <i class="fa fa-star"></i></div>
-                    <div class="filter-option" onclick="selectOption(this); FilterByPrice(400000000,600000000)">400M - 600M <i class="fa fa-star"></i></div>
-                    <div class="filter-option" onclick="selectOption(this); FilterByPrice(600000000,800000000)">600M - 800M <i class="fa fa-star"></i></div>
-                    <div class="filter-option" onclick="selectOption(this); FilterByPrice(800000000,1000000000)">800M - 1B <i class="fa fa-star"></i></div>
-                    <div class="filter-option" onclick="selectOption(this); FilterByPrice(1000000000,99999999999)">> 1B <i class="fa fa-star"></i></div>
-                    <div class="filter-option" onclick="selectOption(this); FilterByPrice(0,99999999999)">All</i></div>
+                    <div class="filter-option" onclick="selectOption(this)">200M - 400M <i class="fa fa-star"></i></div>
+                    <div class="filter-option" onclick="selectOption(this)">400M - 600M <i class="fa fa-star"></i></div>
+                    <div class="filter-option" onclick="selectOption(this)">600M - 800M <i class="fa fa-star"></i></div>
+                    <div class="filter-option" onclick="selectOption(this)">800M - 1B <i class="fa fa-star"></i></div>
+                    <div class="filter-option" onclick="selectOption(this)">> 1B <i class="fa fa-star"></i></div>
+                    <div class="filter-option" onclick="selectOption(this)">All</i></div>
                 </div>
             </div>
     
@@ -87,7 +87,7 @@
             <div class="filter-group">
                 <h3 onclick="toggleFilter(this)">Fuel <i class="fa fa-chevron-up"></i></h3>
                 <div class="filter-options">
-                    <div class="filter-option" onclick="selectOption(this) ; applyFilters() ">Gasoline<i class="fa fa-arrow-right"></i></div>
+                    <div class="filter-option" onclick="selectOption(this)">Gasoline<i class="fa fa-arrow-right"></i></div>
                     <div class="filter-option" onclick="selectOption(this)">Oil <i class="fa fa-arrow-right"></i></div>
                     <div class="filter-option" onclick="selectOption(this)">Electric<i class="fa fa-bolt"></i></div>
                     <div class="filter-option" onclick="selectOption(this)">Gasoline + Oil <i class="fa fa-arrow-right"></i></div>
@@ -123,16 +123,5 @@
             </button>
         </div>
     </div>
-    <script>
-        function applyFilters() { console.log("A"); }
-
-        document.addEventListener('DOMContentLoaded', FetchAllCars);
-        // Hàm chuyển hướng (sửa lại để truyền ID xe)
-        function delayedRedirect(carId) {
-            setTimeout(() => {
-                window.location.href = `detailCar.html?id=${carId}`;
-            }, 500);
-        }
-        </script>
 </body>
 </html>
